Agregamos contacto-whatsapp y cambiamos su icon

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <!-- Nav -->
         <nav id="nav">
-            <a href="#" class="icon solid fa-home"><span>Home</span></a>
-            <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-            <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-            <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+            <a href="#" class="icon solid fa-home"><span>Lugar</span></a>
+            <a href="#work" class="icon solid fa-folder"><span>Dptos</span></a>
+            <a href="#contact" class="icon solid fa-envelope"><span>Contacto</span></a>
+            <a href="https://wa.link/c1sg13" class="icon brands fa-whatsapp" target="_blank"><span>Whatsapp</span></a>
         </nav>
 
         <!-- Main -->
@@ -45,15 +45,6 @@
             <!-- Work -->
             <article id="work" class="panel">
                 <header>
-                    <h2>Requisitos:</h2>
-                </header>
-                <ul>
-                    <li>Mes de depósito</li>
-                    <li>Garantes || Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
-                    <li>No se permiten niños ni mascotas.</li>
-                </ul>
-
-                <header>
                     <h2>Departamento de 39m2</h2>
                 </header>
                 <ul>
@@ -66,6 +57,14 @@
                         <li>Lavadero</li>
                         <li>Espacio para guardar las motos</li>
                     </ul>
+                </ul>
+                <header>
+                    <h2>Requisitos:</h2>
+                </header>
+                <ul>
+                    <li>Mes de depósito</li>
+                    <li>Garantes || Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
+                    <li>No se permiten niños ni mascotas.</li>
                 </ul>
                 <section>
                     <div class="row">
