--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
             <!-- Contact -->
             <article id="contact" class="panel">
                 <header>
-                    <h2>Contact Me</h2>
+                    <h2>Contáctame</h2>
                 </header>
                 <form action="#" method="post">
                     <div>
                         <div class="row">
                             <div class="col-6 col-12-medium">
-                                <input type="text" name="name" placeholder="Name" />
+                                <input type="text" name="name" placeholder="Nombre" />
                             </div>
                             <div class="col-6 col-12-medium">
                                 <input type="text" name="email" placeholder="Email" />
                             </div>
                             <div class="col-12">
-                                <input type="text" name="subject" placeholder="Subject" />
+                                <input type="text" name="subject" placeholder="Asunto" />
                             </div>
                             <div class="col-12">
-                                <textarea name="message" placeholder="Message" rows="6"></textarea>
+                                <textarea name="message" placeholder="Mensaje" rows="6"></textarea>
                             </div>
                             <div class="col-12">
-                                <input type="submit" value="Send Message" />
+                                <input type="submit" value="Enviar Mensaje" />
                             </div>
                         </div>
                     </div>
