corregimos algunos errores ortográficos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>Ubicado en calle Alem a metros de la Diagonal Eva Perón en Barranqueras.</li>
                     <li>Barrio muy seguro. No se inunda. </li>
                     <li>Alquiler $12.000 sin expensas. A parte paga luz, servicio de cable/internet.</li>
-                    <li>Actualización anual</li>
+                    <li>Actualización anual.</li>
                 </header>
                 <a href="#work" class="jumplink pic">
                     <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -48,7 +48,7 @@
                     <h2>Departamento de 39m2</h2>
                 </header>
                 <ul>
-                    <li>30m2 de espacio interior || 4,5m2 patio frontal || 4,5m2 patio trasero</li>
+                    <li>30m2 de espacio interior || 4,5m2 patio frontal || 4,5m2 patio trasero.</li>
                     <li>Ambiente tranquilo, ideal descanso y estudio.</li>
                     <li>PH con entrepiso de 9m2, estilo loft.</li>
                     <ul>Cuenta con:
@@ -62,7 +62,7 @@
                     <h2>Requisitos:</h2>
                 </header>
                 <ul>
-                    <li>Mes de depósito</li>
+                    <li>Mes de depósito.</li>
                     <li>Garantes || Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
                     <li>No se permiten niños ni mascotas.</li>
                 </ul>
