acutalizamos precios por inflación. Quitamos el form de momento

--- a/index.html
+++ b/index.html
@@ -20,21 +20,24 @@
         <nav id="nav">
             <a href="#" class="icon solid fa-home"><span>Lugar</span></a>
             <a href="#work" class="icon solid fa-folder"><span>Dptos</span></a>
-            <a href="#contact" class="icon solid fa-envelope"><span>Contacto</span></a>
+            <!--   <a href="#contact" class="icon solid fa-envelope"><span>Contacto</span></a> -->
             <a href="https://wa.link/c1sg13" class="icon brands fa-whatsapp" target="_blank"><span>Whatsapp</span></a>
         </nav>
 
         <!-- Main -->
         <div id="main">
 
-            <!-- Me -->
             <article id="home" class="panel intro">
                 <header>
-                    <h1>Departamentos Alem</h1>
-                    <li>Ubicado en calle Alem a metros de la Diagonal Eva Perón en Barranqueras.</li>
-                    <li>Barrio muy seguro. No se inunda. </li>
-                    <li>Alquiler $12.000 sin expensas. A parte paga luz, servicio de cable/internet.</li>
-                    <li>Actualización anual.</li>
+
+                    <h1>Departamentos Alem</h3>
+                        <li>Ubicado en calle Alem a metros de la Diagonal Eva Perón en Barranqueras.</li>
+                        <li>Barrio muy seguro. No se inunda. </li>
+                        <li>Alquiler $20.000 por mes, sin expensas (incluye agua). A parte paga luz, servicio de
+                            cable/internet.
+                        </li>
+                        <li>Actualización por inflación: 25% semestral.</li>
+
                 </header>
                 <a href="#work" class="jumplink pic">
                     <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -42,7 +45,6 @@
                 </a>
             </article>
 
-            <!-- Work -->
             <article id="work" class="panel">
                 <header>
                     <h2>Departamento de 39m2</h2>
@@ -58,12 +60,10 @@
                         <li>Espacio para guardar las motos</li>
                     </ul>
                 </ul>
-                <header>
-                    <h2>Requisitos:</h2>
-                </header>
+                <h3>Requisitos:</h3>
                 <ul>
                     <li>Mes de depósito.</li>
-                    <li>Garantes || Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
+                    <li>Garantes: Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
                     <li>No se permiten niños ni mascotas.</li>
                 </ul>
                 <section>
@@ -108,8 +108,8 @@
                 </section>
             </article>
 
-            <!-- Contact -->
-            <article id="contact" class="panel">
+            <!-- Contact Form -->
+            <!--            <article id="contact" class="panel">
                 <header>
                     <h2>Contáctame</h2>
                 </header>
@@ -135,22 +135,21 @@
                     </div>
                 </form>
             </article>
+        </div> -->
+
+            <!-- Footer -->
+            <div id="footer">
+
+            </div>
 
         </div>
 
-        <!-- Footer -->
-        <div id="footer">
-
-        </div>
-
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
 
 </body>
 
