cambios en el precio del alquiler

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <h1>Departamentos Alem</h3>
                         <li>Ubicado en calle Alem a metros de la Diagonal Eva Perón en Barranqueras.</li>
                         <li>Barrio muy seguro. No se inunda. </li>
-                        <li>Alquiler $20.000 por mes, sin expensas (incluye agua). A parte paga luz, servicio de
+                        <li>Alquiler por mes, sin expensas (incluye agua). A parte paga luz, servicio de
                             cable/internet.
                         </li>
-                        <li>Actualización por inflación: 25% semestral.</li>
+                        <li>Actualización por inflación.</li>
 
                 </header>
                 <a href="#work" class="jumplink pic">
