--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
             <article id="home" class="panel intro">
                 <header>
 
-                    <h1>Departamentos Alem</h3>
-                        <li>Ubicado en calle Alem a metros de la Diagonal Eva Perón en Barranqueras.</li>
-                        <li>Barrio muy seguro. No se inunda. </li>
-                        <li>Alquiler por mes, sin expensas (incluye agua). A parte paga luz, servicio de
-                            cable/internet.
-                        </li>
-                        <li>Actualización por inflación.</li>
+                    <h1>Departamentos Alem</h1>
+                    <li>Ubicado a metros de la 'Diagonal Eva Perón'</li>
+                    <li>Barrio muy seguro</li>
+                    <li>No se inunda</li>
+                    <li>Alquiler por mes, sin expensas (incluye agua)</li>
 
                 </header>
                 <a href="#work" class="jumplink pic">
@@ -47,24 +45,35 @@
 
             <article id="work" class="panel">
                 <header>
-                    <h2>Departamento de 39m2</h2>
+                    <h2>Departamento de 40m2</h2>
                 </header>
+                <h3>CUNTA CON:</h3>
                 <ul>
-                    <li>30m2 de espacio interior || 4,5m2 patio frontal || 4,5m2 patio trasero.</li>
-                    <li>Ambiente tranquilo, ideal descanso y estudio.</li>
-                    <li>PH con entrepiso de 9m2, estilo loft.</li>
-                    <ul>Cuenta con:
-                        <li>Cocina-Comedor-Baño</li>
-                        <li>Dormitorio en entrepiso</li>
-                        <li>Lavadero</li>
-                        <li>Espacio para guardar las motos</li>
-                    </ul>
+                    <li>Espacio interior + patio frontal + patio trasero.</li>
+                    <li>Ambiente tranquilo. Ideal descanso y estudio.</li>
+                    <li>PH con entrepiso estilo loft.</li>
+                    <li>Lavadero</li>
+                    <li>Garage para Motos</li>
                 </ul>
-                <h3>Requisitos:</h3>
+                <h3>GASTOS:</h3>
                 <ul>
-                    <li>Mes de depósito.</li>
-                    <li>Garantes: Podes ser tu garante con recibo de sueldo || Contrato por escribanía.</li>
-                    <li>No se permiten niños ni mascotas.</li>
+                    <li>Alquiler: $100.000</li>
+                    <li>Expensas: Sin Expensas</li>
+                    <li>Mes de depósito: Sin mes de depósito</li>
+                    <li>Luz Aparte / Variable</li>
+                </ul>
+                <h3>REQUISITOS:</h3>
+                <ul>
+                    <li>GARANTE con Recibo de sueldo / NO🚫MONOTRIBUTISTA</li>
+                    <li>GARANTE JUBILADOS / Dependiendo del valor</li>
+                    <li>No se admiten niños</li>
+                    <li>No se admiten mascotas</li>
+                </ul>
+                <h3>GASTOS DE INGRESO:</h3>
+                <ul>
+                    <li>Pago mes de Alquiler</li>
+                    <li>Pago de Contrato</li>
+                    <li>Pago de Honorarios</li>
                 </ul>
                 <section>
                     <div class="row">
